<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.maria.prova.maus_tratos.CadastrarMausTratos"
    tools:showIn="@layout/activity_cadastrar_maus_tratos">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maus_tratos_desc_animal"/>
        <EditText
            android:id="@+id/maus_tratos_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/maus_tratos_imagens"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/maus_tratos_imagem_camera"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:src="@drawable/camera"/>

        <ImageButton
            android:id="@+id/maus_tratos_upload"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:src="@drawable/upload_imagem"/>
    </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/maus_tratos_cidade"/>
        <EditText
            android:id="@+id/maus_tratos_cidade_animal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/maus_tratos_altitude"/>
        <EditText
            android:id="@+id/maus_tratos_altitude"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/maus_tratos_longitude"/>
        <EditText
            android:id="@+id/maus_tratos_longitude"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/maus_tratos_informacao"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/nome_contato"/>
        <EditText
            android:id="@+id/maus_tratos_nome_contato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/telefone_contato"/>
        <com.example.maria.prova.util.EditTextTelefone
            android:id="@+id/maus_tratos_telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        
        <Button
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/bt_salvar"
            android:onClick="cadastrarMausTratos"/>

        <Button
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/bt_cancelar"
            android:onClick="cancelarMausTratos"/>


    </LinearLayout>
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:text="@string/campos_obrigatorios"
    android:textColor="#B22222"
    android:textSize="15dp"/>

    </LinearLayout>

</ScrollView>
